<resources>
    <string name="app_name">MAFIA</string>
    <string name="day">ДЕНЬ</string>
    <string name="night">НОЧЬ</string>
    <string name="vote">ГОЛОСОВАНИЕ</string>
    <string name="division">ПОПИЛ</string>
    <string name="roles">РОЛИ</string>

    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="input_num">Введите число</string>
    <string name="spisok">Список игроков</string>
    <string name="players">Введите имя игрока</string>
    <string name="add">ДОБАВИТЬ</string>

    <string name="input_time2">Время на речь(секунды)</string>
    <string name="role">Роль</string>
    <string name="count">Количетво</string>
    <string name="mafia">Мафия</string>
    <string name="don">Дон</string>
    <string name="comissar">Комиссар</string>

    <string name="mafias">Мафии</string>
    <string name="names">Имена</string>>

    <string name="who_dye">Убит</string>
    <string name="player_speech">Речь игрока</string>
    <string name="no_kill">Никто не убит</string>

    <string name="wake_up">Просыпается</string>

    <string name="kick_all">убрать всех</string>
    <string name="no_kick">оставить всех</string>

    <string name="endText">NEW Game</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


</resources>