<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetRoles">

    <TextView
        android:id="@+id/mafias"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center|center_vertical"
        android:text="@string/mafia"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/mafias_name"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mafias">
    </ListView>

    <TextView
        android:id="@+id/don"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center|center_vertical"
        android:text="@string/don"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/mafias_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/don_name"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/don" />

    <TextView
        android:id="@+id/comissar"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:gravity="center|center_vertical"
        android:text="@string/comissar"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/don_name" />

    <Spinner
        android:id="@+id/com_name"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comissar"
        app:layout_constraintBottom_toTopOf="@+id/start_button2" />

    <Button
        android:id="@+id/start_button2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/irishgrover_regular"
        android:gravity="center|center_vertical"
        android:text="@string/start"
        android:textSize="55sp"
        android:onClick="onClickStartGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>