<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ListView
        android:id="@+id/names_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        app:layout_constraintTop_toTopOf="parent">
    </ListView>

    <Button
        android:id="@+id/add_button"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/add"
        android:onClick="onClickAdd"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_time"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/input_time"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:hint="@string/input_time2"
        android:inputType="number"
        android:digits="0123456789"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/start_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_button1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_button_height"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/irishgrover_regular"
        android:gravity="center|center_vertical"
        android:text="@string/next"
        android:textSize="@dimen/my_button_text_size"
        android:onClick="onClickMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/my_button_stroke_width"/>


</androidx.constraintlayout.widget.ConstraintLayout>