<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_players"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/standart_margin"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:hint="@string/players"
        android:inputType="textAutoCorrect"
        android:textSize="@dimen/input_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin"
        android:backgroundTint="@color/red"
        android:text="@string/add"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:onClick="onClickAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_players" />

    <TextView
        android:id="@+id/players_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin"
        android:layout_marginStart="@dimen/standart_margin"
        android:textSize="@dimen/norm_text_size"
        android:gravity="left"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

    <TextView
        android:id="@+id/players_info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standart_margin"
        android:layout_marginEnd="@dimen/standart_margin"
        android:textSize="@dimen/norm_text_size"
        android:gravity="left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/players_info1"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />

    <EditText
        android:id="@+id/input_time"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginBottom="@dimen/standart_marginBetween"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:hint="@string/input_time2"
        android:inputType="number"
        android:textSize="@dimen/input_size"
        app:layout_constraintBottom_toTopOf="@+id/start_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_button1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/irishgrover_regular"
        android:gravity="center|center_vertical"
        android:text="@string/next"
        android:textSize="@dimen/button_text_size"
        android:onClick="onClickMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/button_stickWidht"/>


</androidx.constraintlayout.widget.ConstraintLayout>